<resources>
    <string name="app_name">Exercicio4</string>
    <string name="texto">Texto:</string>
    <string name="tamanho">Tamanho da letra:</string>
    <string name="estilo">Estilo:</string>
    <string name="cor">Cor da letra:</string>
    <string name="enviar">Enviar</string>
    <string name="negrito">Negrito</string>
    <string name="italico">Itálico</string>
    <string name="maiusculas">Maiúsculas</string>
    <string name="vermelho">Vermelho</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="sp">sp</string>
</resources>